[tool.poetry]
name = "symbols-db"
version = "0.1.0"
description = ""
authors = ["Aryan Rajoria <aryanrajoria1003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
blint = "^2.2.3"

[tool.poetry.scripts]
symbols-db = 'symbols_db.cli:main'

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
